💄 fix the collapsed style

--- a/templates/mobile/src/global.scss
+++ b/templates/mobile/src/global.scss
@@ -20,7 +20,7 @@
           display: none;
         }
         .ant-pro-sider-collapsed-button {
-          right: -60px;
+          left: 0;
           border-radius: 0 25px 25px 0;
         }
       }
